--- a/meli-app/components/Header/styles.module.scss
+++ b/meli-app/components/Header/styles.module.scss
@@ -53,7 +53,29 @@
         padding: $spacer-small;
 
         .logoContainer{
-            grid-column: 1;
+            grid-column: 2;
+        }
+
+        .searchContainer {
+            grid-column-start: 4;
+            grid-column-end: 12;
+        }
+    }
+}
+
+@media screen and (max-width: 468px) {
+    .headerContainer {
+        padding: $spacer-small 1 $spacer-small 1 ;
+
+        .logoContainer{
+            grid-column: 6;
+            display: inline-block;
+            margin-bottom: $spacer-small;
+        }
+
+        .searchContainer {
+            grid-column-start: 2;
+            grid-column-end: 12;
         }
     }
 }
