--- a/meli-app/components/Breadcrumb/styles.module.scss
+++ b/meli-app/components/Breadcrumb/styles.module.scss
@@ -3,7 +3,12 @@
 .container {
     @include grid(12);
     min-width: 360px;
-    // padding: 50px $spacer-large  50px $spacer-large ;
+    padding: $spacer-small $spacer-large  $spacer-small $spacer-large;
+    // padding: 0 $spacer-large  0 $spacer-large ;
+    margin: $spacer-medium 0 $spacer-medium 0;
+
+    // margin-top: $spacer-medium;
+    // margin-bottom: $spacer-medium;
 
     .breadCrumb {
         
@@ -11,7 +16,7 @@
         justify-content: center;
         grid-column-start: 2;
         grid-column-end: 3;
-        margin-left: 42px;
+        // margin-left: 42px;
 
         .breadCrumbItem{
             font-size: 16px;
@@ -33,11 +38,11 @@
 
 @media screen and (max-width: 768px) {
     .container {
-        padding: $spacer-small;
+        // padding: $spacer-small;
 
         .breadCrumb{
             grid-column: 2;
-            margin-left: $spacer-small;
+            // margin-left: $spacer-small;
         }
     }
 }
@@ -46,7 +51,7 @@
 
 @media screen and (max-width: 380px) {
     .headerContainer {
-        padding: $spacer-small 1 $spacer-small 1 ;
+        // padding: $spacer-small 1 $spacer-small 1 ;
         .searchContainer {
             grid-column-start: 2;
             grid-column-end: 5;
