--- a/meli-app/components/Header/styles.module.scss
+++ b/meli-app/components/Header/styles.module.scss
@@ -4,12 +4,11 @@
     @include grid(12);
     min-width: 360px;
     background-color: $yellow;
-    padding: $spacer-small  $spacer-large  $spacer-small $spacer-large;
+    padding: $spacer-small $spacer-large  $spacer-small $spacer-large;
     
     .logoContainer {
         display: flex;
         grid-column: 2;
-        justify-content: center;
         align-items: center;
     }
     
@@ -40,9 +39,19 @@
     
         .searchIcon{
             display: flex;
-            padding: $spacer-small;
             cursor: pointer;
-            background-color:  $gray-100;
+            height: 100%;
+            padding: $spacer-small;
+            background-color: $gray-100;
+            border-radius: 0 4px 4px 0;
+
+            &hover {
+                background-color: $gray-300;
+            }
+
+            img {
+                width: 20px;
+            }
         }
     }
 }
@@ -66,7 +75,6 @@
 @media screen and (max-width: 468px) {
     .headerContainer {
         padding: $spacer-small 1 $spacer-small 1 ;
-
         .logoContainer{
             grid-column: 6;
             display: inline-block;
