--- a/meli-app/components/Products-list/styles.module.scss
+++ b/meli-app/components/Products-list/styles.module.scss
@@ -3,14 +3,20 @@
 .listContainer {
     @include grid(12);
     min-width: 360px;
-    padding: $spacer-small $spacer-large $spacer-small $spacer-large;
-
+    padding: 0 $spacer-large 0 $spacer-large;
+    
+    
+    
     .container {
         border-radius: 2px;
         grid-column-end: 12;
         grid-column-start: 2;
         padding: $spacer-medium;
         background-color: $white;
+        
+        // margin-top: 10px;
+        // margin-bottom: 10px;
+        // outline: solid 1px red;
     }
 }
 
