--- a/meli-app/styles/tokens.scss
+++ b/meli-app/styles/tokens.scss
@@ -3,6 +3,7 @@
 $white: #ffffff;
 $yellow: #FFE600;
 $blue-ligth: #3483fa;
+$gray-50: #f9f9f9;
 $gray-100: #eeeeee;
 $gray-300: #999999;
 $gray-600: #666666;
