--- a/meli-app/components/Breadcrumb/styles.module.scss
+++ b/meli-app/components/Breadcrumb/styles.module.scss
@@ -1,35 +1,28 @@
 @import './styles/tokens.scss';
 
-.container {
+.breadCrumbContainer {
     @include grid(12);
     min-width: 360px;
-    padding: $spacer-small $spacer-large  $spacer-small $spacer-large;
-    // padding: 0 $spacer-large  0 $spacer-large ;
-    margin: $spacer-medium 0 $spacer-medium 0;
-
-    // margin-top: $spacer-medium;
-    // margin-bottom: $spacer-medium;
+    padding: 0 $spacer-large;
 
     .breadCrumb {
-        
         display: flex;
-        justify-content: center;
+        grid-column-end: 12;
         grid-column-start: 2;
-        grid-column-end: 3;
-        // margin-left: 42px;
 
-        .breadCrumbItem{
-            font-size: 16px;
-            color: $gray-300;
-            
-            &:not(:last-child)::after{
+        padding: $spacer-medium 0 ;
+        
+        .breadCrumbItem {
+            font-size: 14px;
+            color: $gray-600;
+
+            &:not(:last-child)::after {
                 content: '>';
-                margin-left: $spacer-small;
-                margin-right: $spacer-small;
+                margin: 0 $spacer-small;
             }
-            
+
             &:last-child {
-                font-weight: 600;
+                font-weight: bold;
             }
         }
     }
@@ -37,24 +30,7 @@
 
 
 @media screen and (max-width: 768px) {
-    .container {
-        // padding: $spacer-small;
-
-        .breadCrumb{
-            grid-column: 2;
-            // margin-left: $spacer-small;
-        }
-    }
-}
-
-
-
-@media screen and (max-width: 380px) {
-    .headerContainer {
-        // padding: $spacer-small 1 $spacer-small 1 ;
-        .searchContainer {
-            grid-column-start: 2;
-            grid-column-end: 5;
-        }
+    .breadCrumbContainer {
+        padding: 0 $spacer-small;
     }
 }
