--- a/meli-app/components/Products-list/Item-product-list/styles.module.scss
+++ b/meli-app/components/Products-list/Item-product-list/styles.module.scss
@@ -1,101 +1,119 @@
 @import './styles/tokens.scss';
 
-.container {
-    // @include grid(12);
-    display: flex;
-    width: 1fr;
-    // min-width: 360px;
-    // padding: 0 $spacer-large 0 $spacer-large;
-    // margin-top: 16px;
-    // margin-bottom: 16px;
-    gap: $spacer-medium;
-
-    // // outline: solid 1px yellowgreen;
-
-    // border-top: solid 1px $gray-300;
-    // border-bottom: solid 1px $gray-300;
-    // margin: 10px 0 12px 0;
-    // background-color: violet;
-
-
-    // border-top: solid 1px #999999;
+.cardContainer {
     border-bottom: solid 1px $gray-100;
-    // margin: 10px 0 12px 0;
-    padding: $spacer-medium 0 $spacer-medium ;
 
-    outline: solid 1px;
-    display: flex;
-
-    .thumb {
-        width: 180px;
-        height: 180px;
-        // overflow: hidden;
-        // object-fit: cover;
-        border-radius: 4px;
-        // margin-right: $spacer-medium;
-        // outline: solid 1px;
-
-        img {
-            width: 180px;
-            height: 180px;
-            object-fit: contain;
-        }
-
+    &:not(:last-child, :first-child) {
+        padding: $spacer-medium 0 $spacer-medium 0;
     }
 
-    .details {
-        flex-grow: 1;
+    &:first-child {
+        padding-bottom: $spacer-medium ;
+    }
+    &:last-child {
+        padding-top: $spacer-medium ;
+    }
+
+    &:hover {
+        background-color: $gray-50;
+        transition: background-color 0.3s;
+    }
+    
+    .container {   
         display: flex;
-        // outline: solid 1px red;
-        flex-direction: column;
-        color: $gray-800;
+        gap: $spacer-medium;
+        cursor: pointer;
+    
+        .thumb {
+            width: 180px;
+            height: 180px;
+            border-radius: 4px;
 
-        .infos {
-            display: flex;
-            align-items: center;
-            justify-content: space-between;
-
-            margin-top: $spacer-large;
-            margin-bottom: $spacer-large;
-            
-            .price {
-                flex-grow: 0.8;
-                font-size: 24px;
+            img {
+                width: 180px;
+                height: 180px;
+                object-fit: contain;
             }
+    
+        }
+    
+        .details {
+            flex-grow: 1;
+            display: flex;
+            flex-direction: column;
+            color: $gray-800;
+    
+            .infos {
+                display: flex;
+                align-items: center;
+                justify-content: space-between;
+                    
+                .price {
+                    flex-grow: 0.8;
+                    font-size: 24px;
+                    margin: $spacer-medium 0 $spacer-large 0;
 
-            .locale { 
-                flex-grow: 0.15;
-                font-size: 12px;
-                color: $gray-300;
-                font-weight: bold;
+                    img {
+                        margin-left: 10px;
+                    }
+                }
+    
+                .locale { 
+                    flex-grow: 0.15;
+                    font-size: 12px;
+                    color: $gray-300;
+                    font-weight: bold;
+
+                    margin-top: $spacer-medium;
+                }
+            }
+        
+            .title {
+                flex-grow: 1;
+                font-size: 18px;
+                max-width: 400px;
             }
         }
     
-        .title {
-            flex-grow: 1;
-            font-size: 18px;
-        }
     }
-
+    
+    
 }
+@media screen and (max-width: 600px) {
+    .cardContainer {
+        .container{
+            flex-direction: column;
 
+            .thumb {
+                width: 100%;
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                overflow: hidden;
 
-@media screen and (max-width: 768px) {
-    .listContainer {
-        padding: $spacer-small;
+                img {
+                    width: 100%;
+                }
+            }
+            .details {
+                flex-direction: column;
+                .infos {
+                    align-items: stretch;
+                    justify-content: normal;
+                    flex-direction: column;
+                    margin-bottom: $spacer-large;
 
-        .logoContainer{
-            grid-column: 1;
-        }
-    }
-}
+                    .price {
+                        flex-grow: 1;
+                        margin: $spacer-medium 0 0 0;
+                    }
 
-@media screen and (max-width: 380px) {
-    .headerContainer {
-        padding: $spacer-small 1 $spacer-small 1 ;
-        .searchContainer {
-            grid-column-start: 2;
-            grid-column-end: 5;
+                    .locale {
+                        flex-grow: 1;
+                        margin: 0;
+                    }
+                }
+            }
         }
     }
 }
