--- a/meli-app/styles/globals.scss
+++ b/meli-app/styles/globals.scss
@@ -1,4 +1,6 @@
 @import './tokens.scss';
+@import "react-loader-spinner/dist/loader/css/react-spinner-loader.css";
+@import "~react-image-gallery/styles/scss/image-gallery.scss";
 
 * {
   padding: 0;
@@ -9,4 +11,25 @@
 body {
   background-color: $gray-100;
   font-family: Arial,Helvetica,sans-serif;
+}
+
+.loader {
+  div {
+    position: absolute;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    height: calc(100% - 56px);
+    align-content: center;
+    margin-top: 56px;
+
+    svg {
+      height: auto;
+    }
+  }
+}
+
+.preview *img {
+  width: 680;
+  height: 680;
 }
